# smcsmc-msprime

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION.md  INFERENCE_SUMMARY.md  NEXT_STEPS.md  QUICKSTART.md  STATUS.md
examples/: README.md  demo.py  demo_inference.py
src/smcsmc_msprime/: __init__.py  demography.py  extension.py  inference.py  likelihood.py  particle.py  particle_filter.py  resampling.py
