[project]
authors = [{name = "Chris Cole", email = "chris.c.1221@gmail.com"}]
dependencies = []
name = "smcsmc-msprime"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
smcsmc_msprime = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
msprime = ">=1.3.4,<2"
tskit = ">=1.0.0,<2"
numpy = ">=2.4.1,<3"
scipy = ">=1.17.0,<2"
